crates/rudolint-dockerfile/tests/snapshots/parser_fixtures__healthcheck.snap
---
source: crates/rudolint-dockerfile/tests/parser_fixtures.rs
expression: document_json(&document)
---
{
  "checks": [],
  "comments": [],
  "escape": null,
  "has_buildkit_features": false,
  "instructions": [
    {
      "args": "alpine:3.20",
      "args_span": {
        "end_byte": 16,
        "end_column": 17,
        "end_line": 1,
        "start_byte": 5,
        "start_column": 6,
        "start_line": 1
      },
      "continuations": [],
      "copy": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 16,
          "end_column": 17,
          "end_line": 1,
          "start_byte": 5,
          "start_column": 6,
          "start_line": 1
        },
        "text": "alpine:3.20"
      },
      "from": {
        "alias": null,
        "digest": null,
        "flags": [],
        "image": "alpine:3.20",
        "platform": null
      },
      "healthcheck": null,
      "heredocs": [],
      "keyword": "FROM",
      "keyword_span": {
        "end_byte": 4,
        "end_column": 5,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "line": 1,
      "mounts": [],
      "raw_span": {
        "end_byte": 16,
        "end_column": 17,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "run": null
    },
    {
      "args": "--interval=30s --timeout=3s --retries=3 CMD wget -qO- http://localhost/health || exit 1",
      "args_span": {
        "end_byte": 116,
        "end_column": 100,
        "end_line": 2,
        "start_byte": 29,
        "start_column": 13,
        "start_line": 2
      },
      "continuations": [],
      "copy": null,
      "flags": [
        [
          "interval",
          "30s"
        ],
        [
          "timeout",
          "3s"
        ],
        [
          "retries",
          "3"
        ]
      ],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 116,
          "end_column": 100,
          "end_line": 2,
          "start_byte": 29,
          "start_column": 13,
          "start_line": 2
        },
        "text": "--interval=30s --timeout=3s --retries=3 CMD wget -qO- http://localhost/health || exit 1"
      },
      "from": null,
      "healthcheck": {
        "command": {
          "span": {
            "end_byte": 116,
            "end_column": 100,
            "end_line": 2,
            "start_byte": 69,
            "start_column": 53,
            "start_line": 2
          },
          "text": "CMD wget -qO- http://localhost/health || exit 1"
        },
        "flags": [
          [
            "interval",
            "30s"
          ],
          [
            "timeout",
            "3s"
          ],
          [
            "retries",
            "3"
          ]
        ]
      },
      "heredocs": [],
      "keyword": "HEALTHCHECK",
      "keyword_span": {
        "end_byte": 28,
        "end_column": 12,
        "end_line": 2,
        "start_byte": 17,
        "start_column": 1,
        "start_line": 2
      },
      "line": 2,
      "mounts": [],
      "raw_span": {
        "end_byte": 116,
        "end_column": 100,
        "end_line": 2,
        "start_byte": 17,
        "start_column": 1,
        "start_line": 2
      },
      "run": null
    },
    {
      "args": "NONE",
      "args_span": {
        "end_byte": 133,
        "end_column": 17,
        "end_line": 3,
        "start_byte": 129,
        "start_column": 13,
        "start_line": 3
      },
      "continuations": [],
      "copy": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 133,
          "end_column": 17,
          "end_line": 3,
          "start_byte": 129,
          "start_column": 13,
          "start_line": 3
        },
        "text": "NONE"
      },
      "from": null,
      "healthcheck": {
        "command": {
          "span": {
            "end_byte": 133,
            "end_column": 17,
            "end_line": 3,
            "start_byte": 129,
            "start_column": 13,
            "start_line": 3
          },
          "text": "NONE"
        },
        "flags": []
      },
      "heredocs": [],
      "keyword": "HEALTHCHECK",
      "keyword_span": {
        "end_byte": 128,
        "end_column": 12,
        "end_line": 3,
        "start_byte": 117,
        "start_column": 1,
        "start_line": 3
      },
      "line": 3,
      "mounts": [],
      "raw_span": {
        "end_byte": 133,
        "end_column": 17,
        "end_line": 3,
        "start_byte": 117,
        "start_column": 1,
        "start_line": 3
      },
      "run": null
    }
  ],
  "syntax": null
}
