crates/rudolint-dockerfile/tests/snapshots/parser_fixtures__invalid_json_form.snap
---
source: crates/rudolint-dockerfile/tests/parser_fixtures.rs
expression: document_json(&document)
---
{
  "checks": [],
  "comments": [],
  "escape": null,
  "has_buildkit_features": false,
  "instructions": [
    {
      "arg": null,
      "args": "alpine:3.20",
      "args_span": {
        "end_byte": 16,
        "end_column": 17,
        "end_line": 1,
        "start_byte": 5,
        "start_column": 6,
        "start_line": 1
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 16,
          "end_column": 17,
          "end_line": 1,
          "start_byte": 5,
          "start_column": 6,
          "start_line": 1
        },
        "text": "alpine:3.20"
      },
      "from": {
        "alias": null,
        "digest": null,
        "flags": [],
        "image": "alpine:3.20",
        "platform": null
      },
      "healthcheck": null,
      "heredocs": [],
      "keyword": "FROM",
      "keyword_span": {
        "end_byte": 4,
        "end_column": 5,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "label": null,
      "line": 1,
      "mounts": [],
      "raw_span": {
        "end_byte": 16,
        "end_column": 17,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "recovery": null,
      "run": null
    },
    {
      "arg": null,
      "args": "[\"apk\", \"add\",]",
      "args_span": {
        "end_byte": 36,
        "end_column": 20,
        "end_line": 2,
        "start_byte": 21,
        "start_column": 5,
        "start_line": 2
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "error": "trailing comma at line 1 column 15",
        "kind": "invalid_json",
        "raw": "[\"apk\", \"add\",]"
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "RUN",
      "keyword_span": {
        "end_byte": 20,
        "end_column": 4,
        "end_line": 2,
        "start_byte": 17,
        "start_column": 1,
        "start_line": 2
      },
      "label": null,
      "line": 2,
      "mounts": [],
      "raw_span": {
        "end_byte": 36,
        "end_column": 20,
        "end_line": 2,
        "start_byte": 17,
        "start_column": 1,
        "start_line": 2
      },
      "recovery": null,
      "run": {
        "flags": [],
        "mounts": [],
        "network": null,
        "security": null,
        "shell": {
          "span": {
            "end_byte": 36,
            "end_column": 20,
            "end_line": 2,
            "start_byte": 21,
            "start_column": 5,
            "start_line": 2
          },
          "text": "[\"apk\", \"add\",]"
        }
      }
    },
    {
      "arg": null,
      "args": "[\"sh\", \"-c\", \"echo hello\"",
      "args_span": {
        "end_byte": 66,
        "end_column": 30,
        "end_line": 3,
        "start_byte": 41,
        "start_column": 5,
        "start_line": 3
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "error": "EOF while parsing a list at line 1 column 25",
        "kind": "invalid_json",
        "raw": "[\"sh\", \"-c\", \"echo hello\""
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "CMD",
      "keyword_span": {
        "end_byte": 40,
        "end_column": 4,
        "end_line": 3,
        "start_byte": 37,
        "start_column": 1,
        "start_line": 3
      },
      "label": null,
      "line": 3,
      "mounts": [],
      "raw_span": {
        "end_byte": 66,
        "end_column": 30,
        "end_line": 3,
        "start_byte": 37,
        "start_column": 1,
        "start_line": 3
      },
      "recovery": null,
      "run": null
    }
  ],
  "syntax": null
}
