crates/rudolint-dockerfile/tests/snapshots/parser_fixtures__json_form.snap
---
source: crates/rudolint-dockerfile/tests/parser_fixtures.rs
expression: document_json(&document)
---
{
  "checks": [],
  "comments": [],
  "escape": null,
  "has_buildkit_features": false,
  "instructions": [
    {
      "args": "alpine:3.20",
      "args_span": {
        "end_byte": 16,
        "end_column": 17,
        "end_line": 1,
        "start_byte": 5,
        "start_column": 6,
        "start_line": 1
      },
      "continuations": [],
      "copy": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 16,
          "end_column": 17,
          "end_line": 1,
          "start_byte": 5,
          "start_column": 6,
          "start_line": 1
        },
        "text": "alpine:3.20"
      },
      "from": {
        "alias": null,
        "digest": null,
        "flags": [],
        "image": "alpine:3.20",
        "platform": null
      },
      "healthcheck": null,
      "heredocs": [],
      "keyword": "FROM",
      "keyword_span": {
        "end_byte": 4,
        "end_column": 5,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "line": 1,
      "mounts": [],
      "raw_span": {
        "end_byte": 16,
        "end_column": 17,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "run": null
    },
    {
      "args": "[\"apk\", \"add\", \"curl\"]",
      "args_span": {
        "end_byte": 43,
        "end_column": 27,
        "end_line": 2,
        "start_byte": 21,
        "start_column": 5,
        "start_line": 2
      },
      "continuations": [],
      "copy": null,
      "flags": [],
      "form": {
        "kind": "json",
        "values": [
          "apk",
          "add",
          "curl"
        ]
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "RUN",
      "keyword_span": {
        "end_byte": 20,
        "end_column": 4,
        "end_line": 2,
        "start_byte": 17,
        "start_column": 1,
        "start_line": 2
      },
      "line": 2,
      "mounts": [],
      "raw_span": {
        "end_byte": 43,
        "end_column": 27,
        "end_line": 2,
        "start_byte": 17,
        "start_column": 1,
        "start_line": 2
      },
      "run": {
        "flags": [],
        "mounts": [],
        "network": null,
        "security": null,
        "shell": {
          "span": {
            "end_byte": 43,
            "end_column": 27,
            "end_line": 2,
            "start_byte": 21,
            "start_column": 5,
            "start_line": 2
          },
          "text": "[\"apk\", \"add\", \"curl\"]"
        }
      }
    },
    {
      "args": "[\"sh\", \"-c\", \"echo hello\"]",
      "args_span": {
        "end_byte": 74,
        "end_column": 31,
        "end_line": 3,
        "start_byte": 48,
        "start_column": 5,
        "start_line": 3
      },
      "continuations": [],
      "copy": null,
      "flags": [],
      "form": {
        "kind": "json",
        "values": [
          "sh",
          "-c",
          "echo hello"
        ]
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "CMD",
      "keyword_span": {
        "end_byte": 47,
        "end_column": 4,
        "end_line": 3,
        "start_byte": 44,
        "start_column": 1,
        "start_line": 3
      },
      "line": 3,
      "mounts": [],
      "raw_span": {
        "end_byte": 74,
        "end_column": 31,
        "end_line": 3,
        "start_byte": 44,
        "start_column": 1,
        "start_line": 3
      },
      "run": null
    }
  ],
  "syntax": null
}
