crates/rudolint-dockerfile/tests/snapshots/parser_fixtures__label.snap
---
source: crates/rudolint-dockerfile/tests/parser_fixtures.rs
expression: document_json(&document)
---
{
  "checks": [],
  "comments": [],
  "escape": null,
  "has_buildkit_features": false,
  "instructions": [
    {
      "arg": null,
      "args": "alpine:3.20",
      "args_span": {
        "end_byte": 16,
        "end_column": 17,
        "end_line": 1,
        "start_byte": 5,
        "start_column": 6,
        "start_line": 1
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 16,
          "end_column": 17,
          "end_line": 1,
          "start_byte": 5,
          "start_column": 6,
          "start_line": 1
        },
        "text": "alpine:3.20"
      },
      "from": {
        "alias": null,
        "digest": null,
        "flags": [],
        "image": "alpine:3.20",
        "platform": null
      },
      "healthcheck": null,
      "heredocs": [],
      "keyword": "FROM",
      "keyword_span": {
        "end_byte": 4,
        "end_column": 5,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "label": null,
      "line": 1,
      "mounts": [],
      "raw_span": {
        "end_byte": 16,
        "end_column": 17,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "recovery": null,
      "run": null
    },
    {
      "arg": null,
      "args": "org.opencontainers.image.title=\"rudolint\" maintainer=ops@example.com",
      "args_span": {
        "end_byte": 91,
        "end_column": 75,
        "end_line": 2,
        "start_byte": 23,
        "start_column": 7,
        "start_line": 2
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 91,
          "end_column": 75,
          "end_line": 2,
          "start_byte": 23,
          "start_column": 7,
          "start_line": 2
        },
        "text": "org.opencontainers.image.title=\"rudolint\" maintainer=ops@example.com"
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "LABEL",
      "keyword_span": {
        "end_byte": 22,
        "end_column": 6,
        "end_line": 2,
        "start_byte": 17,
        "start_column": 1,
        "start_line": 2
      },
      "label": {
        "pairs": [
          {
            "key": "org.opencontainers.image.title",
            "value": "\"rudolint\""
          },
          {
            "key": "maintainer",
            "value": "ops@example.com"
          }
        ]
      },
      "line": 2,
      "mounts": [],
      "raw_span": {
        "end_byte": 91,
        "end_column": 75,
        "end_line": 2,
        "start_byte": 17,
        "start_column": 1,
        "start_line": 2
      },
      "recovery": null,
      "run": null
    },
    {
      "arg": null,
      "args": "version=\"1.0.0\"",
      "args_span": {
        "end_byte": 113,
        "end_column": 22,
        "end_line": 3,
        "start_byte": 98,
        "start_column": 7,
        "start_line": 3
      },
      "continuations": [],
      "copy": null,
      "env": null,
      "expose": null,
      "flags": [],
      "form": {
        "kind": "shell",
        "span": {
          "end_byte": 113,
          "end_column": 22,
          "end_line": 3,
          "start_byte": 98,
          "start_column": 7,
          "start_line": 3
        },
        "text": "version=\"1.0.0\""
      },
      "from": null,
      "healthcheck": null,
      "heredocs": [],
      "keyword": "LABEL",
      "keyword_span": {
        "end_byte": 97,
        "end_column": 6,
        "end_line": 3,
        "start_byte": 92,
        "start_column": 1,
        "start_line": 3
      },
      "label": {
        "pairs": [
          {
            "key": "version",
            "value": "\"1.0.0\""
          }
        ]
      },
      "line": 3,
      "mounts": [],
      "raw_span": {
        "end_byte": 113,
        "end_column": 22,
        "end_line": 3,
        "start_byte": 92,
        "start_column": 1,
        "start_line": 3
      },
      "recovery": null,
      "run": null
    }
  ],
  "syntax": null
}
